# constellation

./: .gitignore  .gitleaks.toml  CLAUDE.md  NOTICE.md  README.md  environment-cuda.yml  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
constellation/: __init__.py  transcriptome_to_proteome.py
constellation/catalog/: __init__.py  _http.py  ensembl.py  ensembl_genomes.py  refseq.py  resolver.py  schemas.py  store.py  types.py  uniprot.py
constellation/chromatography/: __init__.py
constellation/chromatography/readers/: __init__.py
constellation/cli/: __init__.py  __main__.py  pipeline.py  transcriptome_to_proteome.py
constellation/codon/: __init__.py
constellation/core/: CLAUDE.md  __init__.py  progress.py
constellation/core/chem/: __init__.py  atoms.py  composition.py  elements.py  isotopes.py  modifications.py
constellation/core/graph/: __init__.py  network.py  tree.py
constellation/core/io/: __init__.py  bundle.py  readers.py  schemas.py
constellation/core/nn/: __init__.py
constellation/core/optim/: __init__.py  _adam.py  _bounds.py  _de.py  _init.py  _layout.py  _lbfgs.py  _protocol.py  _strategies.py  registry.py
constellation/core/sequence/: __init__.py  alphabets.py  nucleic.py  ops.py  proforma.py  protein.py
constellation/core/signal/: __init__.py  baseline.py  calibration.py  matching.py  phase.py  windows.py
constellation/core/stats/: __init__.py  calibration.py  distributions.py  hierarchical.py  intervals.py  losses.py  parametric.py  peaks.py  units.py  variational.py
constellation/core/structure/: __init__.py  atoms.py  coords.py  ensemble.py  geometry.py  selection.py  topology.py
constellation/core/taxonomy/: __init__.py  bundled.py  fetch_ncbi.py  resolver.py  schemas.py  store.py  types.py
constellation/data/: __init__.py  atoms.json  codon_tables.json  genetic_tools.json  neutral_losses.json  proforma.lark  proteases.json  taxonomy_starter.parquet  unimod.json
constellation/data/_raw/: nist_compositions.txt  proforma.ebnf  unimod.xml
constellation/data/sequencing/: __init__.py  cdna_wilburn_v1.json  minimap2_splice_presets.json
constellation/electrophoresis/: __init__.py
constellation/electrophoresis/readers/: __init__.py
constellation/massspec/: CLAUDE.md  __init__.py  acquisitions.py  cli.py  schemas.py
constellation/massspec/annotation/: __init__.py  _grammar.py  mzpaf.py  usi.py
constellation/massspec/counter/: __init__.py  attribution.py  calibration.py  candidates.py  channels.py  component.py  discover.py  emit.py  iit.py  io.py  model.py  observe.py  orchestrate.py  panel.py  priors.py  residual.py  schemas.py  simulate.py
constellation/massspec/io/: __init__.py
constellation/massspec/peptide/: __init__.py  envelope.py  ions.py  match.py  mz.py  neutral_losses.py
constellation/massspec/quant/: __init__.py  chromatogram.py  io.py  peak_index.py  quant.py  schemas.py  targets.py
constellation/massspec/readers/: __init__.py
constellation/massspec/search/: __init__.py  collision.py  crosscheck.py  io.py  novel.py  schemas.py  search.py
constellation/massspec/spectra/: __init__.py  consensus.py  noise.py  similarity.py
constellation/massspec/tokenize/: __init__.py
constellation/models/: __init__.py
constellation/nmr/: __init__.py
constellation/nmr/io/: __init__.py  bruker.py  schemas.py
constellation/nmr/processing/: __init__.py  apodization.py  fourier.py  phase.py  reference.py  zerofill.py
constellation/sequencing/: CLAUDE.md  __init__.py  _render.py  acquisitions.py  genetic_tools.py  parallel.py  progress.py  samples.py
constellation/sequencing/align/: __init__.py  cigar.py  consensus.py  locate.py  map.py  minimap2.py  pairwise.py  presets.py
constellation/sequencing/alignments/: __init__.py  alignments.py  io.py
constellation/sequencing/annotation/: __init__.py  annotation.py  busco.py  io.py  repeats.py  telomeres.py  transcripts.py
constellation/sequencing/assembly/: __init__.py  _samtools.py  agp.py  assembly.py  (+11 more)
constellation/structure/: __init__.py
constellation/viz/: CLAUDE.md  __init__.py  cli.py  install.py
docs/: README.md  architecture.md  index.md
docs/plans/: cartographer-counter-port.md  companion-instruments-integration.md  counter-real-data-deconstruction.md  de-novo-clustering-roadmap.md  encyclopedia-6.5.15-utilities.md  hupo-psi-standards-roadmap.md  nmrwelder-port.md  peak-boundary-refinement-research.md  profile-vs-centroid-research.md  viz-and-dashboard.md
scripts/: README.md  analyze-demux-statistics.py  build-atoms-json.py  build-codon-tables-json.py  build-elements-json.py  build-genetic-tools-json.py  build-minimap2-splice-presets-json.py  build-neutral-losses-json.py  build-proforma-grammar.py  build-proteases-json.py  build-sequencing-primers-json.py  build-taxonomy-starter-parquet.py  build-unimod-json.py  install-busco.sh  install-dorado.sh  install-encyclopedia.sh  install-hifiasm.sh  install-iqtree.sh  install-mmseqs2.sh  install-progressive-cactus.sh  install-ragout.sh  install-ragtag.sh  install-thermo-dlls.sh
tests/: _viz_fixtures.py  conftest.py  test_align_cigar.py  test_align_consensus.py  test_align_diagnostics.py  test_align_map.py  test_alignments_container.py  test_assembly_agp.py  test_assembly_container.py  test_assembly_diagnostics.py  test_assembly_gfa.py  test_assembly_hifiasm.py  test_assembly_io.py  test_assembly_manifest.py  test_assembly_scaffold_polish.py  test_assembly_scratch_helpers.py  test_assembly_stats.py  test_biochem_mask.py  test_busco.py  test_catalog.py  test_chem_atoms.py  test_chem_composition.py  test_chem_elements.py  test_chem_isotopes.py  test_chem_modifications.py  test_cli_align_minimap2_args.py  test_cli_counter.py  test_cli_diagnose.py  test_cli_doctor.py  test_cli_libstdcxx_canary.py  test_cluster_diagnostics.py  test_collision_filter_elib.py  test_core_graph_network.py  test_core_graph_tree.py  test_core_io_bundle.py  test_core_io_readers.py  test_core_io_schemas.py  test_core_optim_adam.py  test_core_optim_de.py  test_core_optim_lbfgs.py  (+151 more)
(+232 files in other folders)
