[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation"
version = "0.0.0"
description = "Integrative bioinformatics platform for analysis of diverse omic and bioanalytical datasets"
readme = "README.md"
license = { text = "Apache-2.0" }
# Ceiling <3.13 driven by koinapy 0.0.10 + PyTorch 2.5.x (same as
# Cartographer). pythonnet 3.0.3 itself supports 3.12 fine. Revisit
# when koinapy ships a 3.13-compatible wheel.
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyarrow>=18",
    "regex>=2024.0",
    # ProForma 2.0 grammar parser (HUPO-PSI standard). Used by
    # core.sequence.proforma; see scripts/build-proforma-grammar.py.
    "lark>=1.1,<2",
    # MS file-format I/O (mzML/MGF) and ProForma cross-validation. Earns
    # a base-tier slot because both core.sequence (interop tests) and
    # massspec (mzML reads) depend on it. Per CLAUDE.md, pyteomics is
    # still BANNED from being imported by core.sequence.proforma itself
    # — the parser is independently implemented via lark + the upstream
    # EBNF; pyteomics is only used for cross-validation in tests and the
    # future mzML reader.
    "pyteomics>=4.7",
]

[project.optional-dependencies]
# Modality extras: install the Python-wheel-available bits. Native
# binaries (Thermo DLLs, EncyclopeDIA jar, mmseqs2, Dorado, ...) go
# through `scripts/install-*.sh` and thirdparty/ adapters — not extras.
ms         = ["requests", "koinapy"]
sequencing = ["pod5>=0.3", "edlib", "parasail", "pysam>=0.21"]
structure  = []  # OpenMM + PDBFixer are conda-only; guarded lazy-import in thirdparty/
dynamics   = []  # same
# Visualization layer: FastAPI server + Datashader rasterization for the
# `constellation viz <subcommand>` and `constellation dashboard` GUIs. The JS
# frontend ships pre-built under constellation/viz/static/ (gitignored source,
# built by python -m constellation.viz.frontend.build or by CI on tag push).
viz        = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "datashader>=0.16",
    "websockets>=12",
    "httpx>=0.27",  # used by the FastAPI test client; keep with viz so the
                    # viz test suite installs cleanly without dev extras.
]
all        = ["constellation[ms,sequencing,structure,dynamics,viz]"]
dev        = ["pytest>=8.0", "ruff>=0.9", "pre-commit>=4.0"]

[project.scripts]
# Primary binary with subcommand dispatcher.
constellation = "constellation.cli.__main__:main"
# Thin legacy shims — muscle-memory compatibility with Cartographer.
# Each forwards to the same constellation subcommand handler.
mzpeak           = "constellation.cli.__main__:main_mzpeak"
koina-library    = "constellation.cli.__main__:main_koina"

[tool.setuptools.packages.find]
where = ["."]
include = ["constellation*"]

# Ship the pre-built JS bundle (under constellation/viz/static/<entry>/...) and
# the bundled JSON data files alongside the Python source. The static/ tree is
# git-ignored — wheels published from a release CI run will contain the built
# bundle; source-tarball installs without it produce an actionable error at
# `constellation viz` startup pointing at `python -m constellation.viz.frontend.build`.
[tool.setuptools.package-data]
"constellation.viz" = ["static/**/*"]
"constellation.data" = ["*.json", "_raw/**/*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: tests that read whole-file sample data (skip with `-m 'not slow'`)",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E401",  # multiple imports on one line
    "E501",  # long lines — mass / modification tables are intentional
    "E741",  # ambiguous variable name (e.g. 'l') in ion-ladder indexing
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # allow unused imports in test files
"**/__init__.py" = ["F401"]  # package re-exports
